2021-05-20  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp:
	Explicitly pass /dev/null to unit-sub.awk because /usr/bin/awk on
	Solaris 10 does not seem to recognize assignment to ARGV.

	* dejagnu: Search for a POSIX Awk and validate that at least a
	simple Awk program actually works.
	* testsuite/launcher.all/command.exp: Add tests for error produced
	when no Awk is found and a help message is requested.

2021-05-18  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Redirect input from /dev/null when testing if awk is
	GNU Awk; this avoids a hang on Solaris 10 where awk treats
	--version as an Awk program and attempts to read input.
	(command): Rework the initial setting of this variable to avoid
	limitations in Solaris 10 awk.

	* testsuite/report-card.all/onetest.exp: Avoid Tcl error when item
	and totals lines are missing entirely.

	* testsuite/runtest.main/pr48155.exp: Fix assumption about exit
	code from /bin/false, which is different on Solaris.

2021-05-05  Jacob Bachmeyer  <jcb@gnu.org>

	PR48155

	* Makefile.am (TESTSUITE_FILES): Update.
	(CLEANFILES): Add special init file for PR48155 nested tests.

	* testsuite/runtest.main/pr48155.exp: New file.
	* testsuite/runtest.main/pr48155-csh.sh: New trivial file.  This
	script emulates the behavior of the C shell if an attempt is made
	to use it to run the config.guess script.

2021-05-04  Jacob Bachmeyer  <jcb@gnu.org>

	PR48155

	* runtest.exp: Tighten regexp used to validate output from
	config.guess.  The previous regexp would accept an error produced
	if config.guess was incorrectly run using the C shell.

2021-04-28  Jacob Bachmeyer  <jcb@gnu.org>

	* configure, Makefile.in: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* Makefile.am (TAR_OPTIONS): Explicitly select v7 tarball format
	to work around Automake limitation of assuming that v7 is default.

2021-04-20  Jacob Bachmeyer  <jcb@gnu.org>
