@@ -50,6 +50,7 @@ foreach t $tests {
 	    "" \
 	    [lindex $t 2]] } {
 	fail "[lindex $t 0]/[lindex $t 1]"
+	runtest_copy_nested_testsuite_log stat
     } else {
 	pass "[lindex $t 0]/[lindex $t 1]"
     }
